# ota_server

./: .gitignore  .gitmodules  partitions.csv  partitions_example.csv  sdkconfig  sdkconfig.old
components/ota_lib/: readme.md
components/ota_lib/esp32/: ota.c  ota_data.h  ota_log.c
components/ota_lib/include/: ota.h  ota_log.h
main/: CMakeLists.txt  file_server.c  file_server.h  main.c  mount.c  ota_server.c  upload_script.html
